--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,3 +8,8 @@
 .username{
     margin-left:auto;
 }
+
+button{
+    background-color: var(--tg-theme-button-color);
+    color:var(--tg-theme-button-text-color);
+}
