--- a/src/components/Productlist/Productlist.css
+++ b/src/components/Productlist/Productlist.css
@@ -1,3 +1,12 @@
+.list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.item{
+    margin-right:10px;
+    margin-bottom:10px;
+}
 .naming{
     display:inline-block;
     display: flex;
