--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 *{
+  font-family: Poppins;
   margin:0;
   padding: 0;
   box-sizing: border-box;
@@ -7,5 +8,5 @@
 body{
   background: var(--tg-theme-bg-color);
   color: var(--tg-theme-text-color);
-  font-family: New Amsterdam;
+
 }
