--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -3,11 +3,16 @@
     flex-direction: column;
     border: 1px solid var(--tg-theme-button-color);
     padding: 15px;
+    margin: 10px;
     width: 170px;
-    border-radius:4px;
+    border-radius:6px;
 }
-
+.title{
+    display: block;
+    margin-left:50%;
+}
 .img{
+    margin-top:3px;
     width:100%;
     background:lightgrey;
     height: 100px;
