--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -1,4 +1,5 @@
 .product{
+    font-family: Poppins;
     display: flex;
     flex-direction: column;
     border: 1px solid var(--tg-theme-button-color);
@@ -9,7 +10,7 @@
 }
 .title{
     display: block;
-    margin-left:50%;
+    margin-left:30%;
 }
 .img{
     margin-top:3px;
@@ -20,6 +21,8 @@
     background: var(--tg-theme-button-color);
 }
 .description{
+    display:flex;
+    justify-content: center;
     font-size: 0.8em;
 }
 .add-btn{
