--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -9,10 +9,12 @@
     border-radius:6px;
 }
 .title{
-    display: block;
-    margin-left:30%;
+    font-family: Poppins;
+    display: flex;
+    justify-content: center;
 }
 .img{
+    font-family: Poppins;
     margin-top:3px;
     width:100%;
     background:lightgrey;
@@ -21,10 +23,19 @@
     background: var(--tg-theme-button-color);
 }
 .description{
+    font-family: Poppins;
     display:flex;
     justify-content: center;
     font-size: 0.8em;
 }
 .add-btn{
+    font-family: Poppins;
+    display: flex;
+    justify-content: center;
     width: 100%;
+}
+.price{
+    font-family: Poppins;
+    display: flex;
+    justify-content: center;
 }
